# game2

./: .gitignore  Cargo.toml  README.md  TODO  config.json  game2.code-workspace
lib/gl/: Cargo.toml  build.rs
lib/stb_image/: Cargo.toml  build.rs
lib/stb_image/src/: bindings.rs  lib.rs  stb_image.c
misc/: Rust-notes.md
models/: box.glb
models/box/: box.gltf
models/viking_room/: scene.gltf
shaders/basic/: basic.frag  basic.vert
shaders/editor/: gui.frag  gui.vert  terrain.frag  terrain.vert
shaders/skybox/: skybox.frag
src/: buffers.rs  camera.rs  config.rs  input.rs  main.rs  model.rs  ray.rs  skybox.rs  terrain.rs  texture.rs  utils.rs
src/editor/: brush.rs  gui.rs  mod.rs
src/opengl/: buffers.rs  mod.rs  shader.rs
src/shaders/debug/: aabb.frag  aabb.vert
src/shaders/debug/terrain/: line.frag  line.vert  normals.frag.glsl  normals.geometry.glsl  point.frag  point.vert  terrain.tc.glsl  terrain.te.glsl
src/shaders/editor/: gui.frag  gui.vert  heightmap.frag  heightmap.vert  terrain.frag.glsl  terrain.tc.glsl  terrain.te.glsl  terrain.vert.glsl
src/shaders/editor/terrain/: shadow.frag.glsl  shadow.te.glsl  terrain.frag.glsl  terrain.te.glsl  terrain.vert.glsl
src/shaders/simple/: simple.frag  simple.vert
src/shaders/skybox/: skybox-wireframe.frag  skybox-wireframe.vert  skybox.frag  skybox.vert
textures/brushes/: simple.tga
