[package]
name = "game2"
version = "0.1.0"
authors = ["Ivan Ivanov <ivan@ivanovs.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "^0.27.0"
gl = { path = "lib/gl" }
glam = "^0.17.1"
gltf = { version = "0.16.0", features = ["names"], default-features = false }
thiserror = "1.0"
memoffset = "0.6.4"
egui = "0.13.1"
epaint = "0.13.0"
stb_image = { path = "lib/stb_image" }

[profile.dev.package."*"]
opt-level = 3
