[package]
name = "game2"
version = "0.1.0"
authors = ["Ivan Ivanov <ivan@ivanovs.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "^0.27.0"
gl = { path = "lib/gl" }
glam = "0.20.0"
gltf = { version = "0.16.0", features = ["names", "import"], default-features = false }
thiserror = "1.0"
memoffset = "0.6.4"
egui = "0.15.0"
epaint = "0.15.0"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev.package."*"]
opt-level = 3
