[package]
name = "game2"
version = "0.1.0"
authors = ["Ivan Ivanov <ivan@ivanovs.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.27"
gl = { path = "lib/gl" }
glam = { version = "0", features = ["serde"] }
gltf = { version = "0", features = ["names", "import"], default-features = false }
thiserror = "1"
memoffset = "0"
egui = "0"
egui-winit = "0"
egui-gizmo = "0"
epaint = "0"
image = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."egui-gizmo"]
opt-level = 0
